--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255, 130, 5252);
+    background-color: rgb(255, 130, 55555555);
     color: linen;
     font-size: 1%;
     line-height: 1.4;
