--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(224,255,255);
-    color: linen;
+    color: PaleGreen;
     font-size: 150%;
     line-height: 1.4;
 }
